--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,11 +8,15 @@ Imports:
     config,
     golem,
     shiny,
-    processx,
-    attempt,
-    DT,
-    glue,
-    htmltools
+    htmltools,
+    pkgload,
+    roxygen2,
+    rstudioapi,
+    usethis,
+    devtools,
+    promises,
+    future,
+    ggplot2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
